motion tracker crash blender #38281

Closed
opened 2014-01-19 01:27:14 +01:00 by Alexander N. · 18 comments
Member

System Information
Windows 8.1 64bit, 16GB RAM, i7 3770 CPU

Blender Version
Broken: official release 2.69, ..., blender-2.69-96e9c67-win64-vc12.zip
Worked: unknown

Short description of error
blender crashes at random positions during motion tracking.
tested with MP4, AVI, PNG as clip

Exact steps for others to reproduce the error

  1. open blender
  2. switch screen to motion tracking
  3. in "Movie Clip Editor" open "0001-2654.mp4"
  4. on "Time Line" change the end frame to 2654
  5. in "Movie Clip Editor" on "Marker" Panel, click on "Detect Features"
  6. in "Movie Clip Editor" on "Tracker" Panel, click on "Track Markers" [Ctrl + T]
    often, blender crashs at random positions - specially with many feature points.
    tested with PNG-image sequence (high quality), MP4 (pure quality), AVI (x264, lossless)

video that shows how blender crashs
(by mistake that video shows 3 times the same blender build, but to me, official release 2.69, ..., blender-2.69-96e9c67-win64-vc12.zip are broken):
issue_-_motion_tracking.mp4

clip to track motion:
0001-2654.mp4

test scene to render the video clip (it is not a blend file to show the issue! it is only to generate the video clip in high quality):
test_-_video_clip.blend

**System Information** Windows 8.1 64bit, 16GB RAM, i7 3770 CPU **Blender Version** Broken: official release 2.69, ..., blender-2.69-96e9c67-win64-vc12.zip Worked: unknown **Short description of error** blender crashes at random positions during motion tracking. tested with MP4, AVI, PNG as clip **Exact steps for others to reproduce the error** 1. open blender 2. switch screen to motion tracking 3. in "Movie Clip Editor" open "0001-2654.mp4" 4. on "Time Line" change the end frame to 2654 5. in "Movie Clip Editor" on "Marker" Panel, click on "Detect Features" 6. in "Movie Clip Editor" on "Tracker" Panel, click on "Track Markers" [Ctrl + T] often, blender crashs at random positions - specially with many feature points. tested with PNG-image sequence (high quality), MP4 (pure quality), AVI (x264, lossless) video that shows how blender crashs (by mistake that video shows 3 times the same blender build, but to me, official release 2.69, ..., blender-2.69-96e9c67-win64-vc12.zip are broken): [issue_-_motion_tracking.mp4](https://archive.blender.org/developer/F70561/issue_-_motion_tracking.mp4) clip to track motion: [0001-2654.mp4](https://archive.blender.org/developer/F70562/0001-2654.mp4) test scene to render the video clip (it is not a blend file to show the issue! it is only to generate the video clip in high quality): [test_-_video_clip.blend](https://archive.blender.org/developer/F70564/test_-_video_clip.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Author
Member

1>log1.txt log1.txt
2>log2.txt log2.txt
blender.crash.txt blender.crash.txt

1>log1.txt [log1.txt](https://archive.blender.org/developer/F70565/log1.txt) 2>log2.txt [log2.txt](https://archive.blender.org/developer/F70566/log2.txt) blender.crash.txt [blender.crash.txt](https://archive.blender.org/developer/F70567/blender.crash.txt)
Sergey Sharybin self-assigned this 2014-01-20 12:57:52 +01:00
Author
Member

in the post from 2014-01-19 01:32:38
i uploaded a wrong log file... here is a one with a crash
log1.txt (by using 'blender-2.69-fd0b104-win64.zip')

BTW.: under linux ubuntu 13.10 and 'blender-2.69-7436a3f-linux-glibc211-x86_64.tar.bz2' (on the same hardware environment), the clip was tracked without crash.

in the post from 2014-01-19 01:32:38 i uploaded a wrong log file... here is a one with a crash [log1.txt](https://archive.blender.org/developer/F71054/log1.txt) (by using 'blender-2.69-fd0b104-win64.zip') BTW.: under linux ubuntu 13.10 and 'blender-2.69-7436a3f-linux-glibc211-x86_64.tar.bz2' (on the same hardware environment), the clip was tracked without crash.

Is there anything usable in C:\Users\John\AppData\Local\Temp\blender.crash.txt after the crash?

Is there anything usable in `C:\Users\John\AppData\Local\Temp\blender.crash.txt` after the crash?

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Couldn't actually reproduce the issue. Does it depend on file format, resolution and number of tracks being tracked?

@ThomasDinges, mind checking this on your computer?

Couldn't actually reproduce the issue. Does it depend on file format, resolution and number of tracks being tracked? @ThomasDinges, mind checking this on your computer?
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

@Sergey: unfortunately no, in the blender.crash.txt is nothing usefully that would point to the cause of the crash.
i have a second computer with exact the same hardware, but different GPU - on that computer blender crash as well.
and my third, my business laptop (i Core2 Duo T7500, 4GB, Windows 7 64bit SP1, )
what i exactly was doing:

  1. downloaded blender (blender-2.69-fd0b104-win64.zip-version)
  2. extracted to here ("D:_DOWNLOADS_unsorted\blender-2.69-fd0b104-win64")
  3. deleted "%AppData%\Blender Foundation" folder to be sure noting old will interfering
  4. downloded "0001-2654.mp4" (to "D:_TEMP\0001-2654.mp4")
  5. opened blender
  6. changed screen to "Motion Tracking"
  7. on the lower "Movie Clip Editor" i clicked to "Open" (bpy.ops.clip.open())
  8. navigate to "0001-2654.mp4" file destination and selected that file
  9. clicked "Open Clip" (bpy.ops.file.execute())
  10. changed in lowest time line view the end frame to 2654 (bpy.data.scene["Scene"].frame_end)
  11. in the "Movie Clip Editor" view, i scrolled "two" times the mouse wheel to decrease the view size of the video clip to fit to the view
  12. on the "Movie Clip Editor"s left Marker panel i clicked "Detect Features" (bpy.ops.clip.detect_features())
  13. in the "Movie Clip Editor"s left Track panel, i clicked ">" (bpy.ops.clip.track_markers(backwards=False, sequence=True))
  14. i leave the system & mouse & keyboard untouched... and watch the progress in the viewport
    (the crash happens on different frames from computer to computer and sometimes from try to try)

on my business laptop is tried to attach the debugger of VisualStudio 2010 to a running blender process and processed all the above steps...
but blender closes and the debugger could not catch any exception - maybe i did something wrong - Native code (debugging) is not my favorit part.

except of some Access violation writing location during UI i got nothing
"First-chance exception at 0x00000000140913aa in blender.exe_ 0cC0000005: Access violation writing location 0x0000000003cdcf68."
"First-chance exception at 0x068415e9 (nvoglv64.dll) in blender.exe_ 0cC0000005: Access violation writing location 0x0000000003cdceb4."

@Sergey: unfortunately no, in the blender.crash.txt is nothing usefully that would point to the cause of the crash. i have a second computer with exact the same hardware, but different GPU - on that computer blender crash as well. and my third, my business laptop (i Core2 Duo T7500, 4GB, Windows 7 64bit SP1, ) what i exactly was doing: 1. downloaded blender (blender-2.69-fd0b104-win64.zip-version) 2. extracted to here ("D:\_DOWNLOADS\_unsorted\blender-2.69-fd0b104-win64") 3. deleted "%AppData%\Blender Foundation" folder to be sure noting old will interfering 4. downloded "0001-2654.mp4" (to "D:\_TEMP\0001-2654.mp4") 5. opened blender 6. changed screen to "Motion Tracking" 7. on the lower "Movie Clip Editor" i clicked to "Open" (bpy.ops.clip.open()) 8. navigate to "0001-2654.mp4" file destination and selected that file 9. clicked "Open Clip" (bpy.ops.file.execute()) 10. changed in lowest time line view the end frame to 2654 (bpy.data.scene["Scene"].frame_end) 11. in the "Movie Clip Editor" view, i scrolled "two" times the mouse wheel to decrease the view size of the video clip to fit to the view 12. on the "Movie Clip Editor"s left Marker panel i clicked "Detect Features" (bpy.ops.clip.detect_features()) 13. in the "Movie Clip Editor"s left Track panel, i clicked ">" (bpy.ops.clip.track_markers(backwards=False, sequence=True)) 14. i leave the system & mouse & keyboard untouched... and watch the progress in the viewport (the crash happens on different frames from computer to computer and sometimes from try to try) on my business laptop is tried to attach the debugger of VisualStudio 2010 to a running blender process and processed all the above steps... but blender closes and the debugger could not catch any exception - maybe i did something wrong - Native code (debugging) is not my favorit part. except of some Access violation writing location during UI i got nothing "First-chance exception at 0x00000000140913aa in blender.exe_ 0cC0000005: Access violation writing location 0x0000000003cdcf68." "First-chance exception at 0x068415e9 (nvoglv64.dll) in blender.exe_ 0cC0000005: Access violation writing location 0x0000000003cdceb4."

Added subscriber: @soderlind

Added subscriber: @soderlind

I can confirm the same crash on my computer. It happens exactly as described in first post. I did some tests on different versions of blender, both 32-bit and 64-bit.

Blender version 2.66a and older seems to work.
Blender version 2.67 and later crashes.

My system:
Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600

I also tried other lower resolution png-sequences only about 350 frames long. They could crash too but I had to use many more markers before it happened. Prefetching the frames seemed to help at first but after some tries it also crashed.
Changing Memory Cache Limit in preferences didn't seem to make any difference.

One thing I noticed when tracking the attached test-file, was that Blender version 2.67 and later would track fast in the beginning then slower and slower (like 4 frames a second) then not update the screen for a few seconds and then suddenly jump forward hundreds of frames having tracked all frames correctly but very much faster during the freeze. Don't know if it's related to this bug.

Hope this helps to narrow it down.

I can confirm the same crash on my computer. It happens exactly as described in first post. I did some tests on different versions of blender, both 32-bit and 64-bit. Blender version 2.66a and older seems to work. Blender version 2.67 and later crashes. My system: Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600 I also tried other lower resolution png-sequences only about 350 frames long. They could crash too but I had to use many more markers before it happened. Prefetching the frames seemed to help at first but after some tries it also crashed. Changing Memory Cache Limit in preferences didn't seem to make any difference. One thing I noticed when tracking the attached test-file, was that Blender version 2.67 and later would track fast in the beginning then slower and slower (like 4 frames a second) then not update the screen for a few seconds and then suddenly jump forward hundreds of frames having tracked all frames correctly but very much faster during the freeze. Don't know if it's related to this bug. Hope this helps to narrow it down.

Does anyone noticed memory usages of blender? Does it run out of memory or so?

Does anyone noticed memory usages of blender? Does it run out of memory or so?
Author
Member

@Sergey: no, not on my three computers.
i can not observe any abnormal or extensive memory usage on my computer.
on the tiniest laptop with 4GB RAM, blender uses ~1GB during tracking.
the memory usage follows a normal loading curve with saturation at ~1GB usage long before blender will crash.

@Sergey: no, not on my three computers. i can not observe any abnormal or extensive memory usage on my computer. on the tiniest laptop with 4GB RAM, blender uses ~1GB during tracking. the memory usage follows a normal loading curve with saturation at ~1GB usage long before blender will crash.

I've committed a fix (910f4df) which potentially fixes this bug. Please grab a build which includes this fix and give it a try.

I've committed a fix (910f4df) which potentially fixes this bug. Please grab a build which includes this fix and give it a try.

I tried the latest build from buildbot (blender-2.69-b096845, both 32 and 64 bit) and did some quick tests. Everything is working fine here. It doesn't crash anymore and the occasional freezing of the screen issue I mentioned earlier seems to have been fixed as well. Thanks.

I tried the latest build from buildbot (blender-2.69-b096845, both 32 and 64 bit) and did some quick tests. Everything is working fine here. It doesn't crash anymore and the occasional freezing of the screen issue I mentioned earlier seems to have been fixed as well. Thanks.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Coolie! Closing the report then :)

Coolie! Closing the report then :)
Author
Member

yes, i can confirm, blender-2.69-b096845-win64.zip works well... thanks!

yes, i can confirm, blender-2.69-b096845-win64.zip works well... thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38281
No description provided.