Fix race condition between tracking thread and tracks map sync

This might have been a reason of bug T38281.